adding todo list

--- a/_posts/2015-02-04-first-day-SP15.md
+++ b/_posts/2015-02-04-first-day-SP15.md
@@ -17,7 +17,10 @@ Well, we made it through the near blizzard, the 3 hour drive that took all of 4.
 ## Classes:
 
 * Intro To The New Testament -- Guy Nave
- * ...
+ * I knew the professor was going to swear, but I was not expecting a "s**t" in the first five min.
+ * I really like how the professor handles the reading reflections
+  * They are not a fixed length, just until the student feels comfertable with the content.
+ * I feel like I am really going to like this class!
 
 * Programming Languages -- Kent Lee
  * ...
