--- a/404.md
+++ b/404.md
@@ -1,12 +1,14 @@
 ---
 layout: page
 title: "Page Not Found"
-description: "Page not found. Your pixels are in another canvas."
+description: "Page not found. Someone got lost..."
 comments: false
 share: false
 ---  
 
 Sorry, but the page you were trying to view does not exist --- perhaps you can try searching for it below.
+
+<a href="http://maespey.com/" class="btn btn-primary">Go Home</a>
 
 <script type="text/javascript">
   var GOOG_FIXURL_LANG = 'en';
