formatting heading text

--- a/_posts/2015-02-04-first-day-SP15.md
+++ b/_posts/2015-02-04-first-day-SP15.md
@@ -1,7 +1,7 @@
 ---
 hide: false
 layout: post
-title: First Day ~~ Spring 2015
+title: First Day  Spring 2015
 description: "First day of spring semester!"
 modified: 2015-02-04
 tags: [Luther, Spring, Computer Science]
