fixing categroies mixup

--- a/_posts/articles/2015-02-04-first-day-SP15.md
+++ b/_posts/articles/2015-02-04-first-day-SP15.md
@@ -3,6 +3,7 @@ hide: true
 layout: post
 title: First Day  Spring 2015
 description: "First day of spring semester!"
+category: articles
 modified: 2015-02-04
 tags: [Luther, Spring, Computer Science]
 image:
