--- a/_posts/projects/2014-10-16-todo-list.md
+++ b/_posts/projects/2014-10-16-todo-list.md
@@ -3,6 +3,7 @@ hide: false
 layout: post
 title: Todo List Project
 description: "A simple javascript based todo list."
+category: projects
 modified: 2015-02-06
 tags: [Luther, Projects, CS]
 image:
