--- a/_posts/articles/2015-02-04-first-day-SP15.md
+++ b/_posts/articles/2015-02-04-first-day-SP15.md
@@ -1,5 +1,5 @@
 ---
-hide: true
+hide: false
 layout: post
 title: First Day  Spring 2015
 description: "First day of spring semester!"
@@ -13,15 +13,20 @@ image:
 ---
 ## The Way Here:
 
-Well, we made it through the near blizzard, the 3 hour drive that took all of 4.5; it wasn't fun, but we did it. Anyway today marks the first day that I am no longer a Physics major, and now it is time to focus on Computer Science. I think that this semester will be great, I have a lot of fun classes that I am really interested in. This is the first semester on campus that I am actually excited for.
+Well, we made it through the near blizzard, the 3 hour drive that took all of 4.5; it wasn't fun, but we did it. Anyway today marks the first day that I am no longer a Physics major, and now it is time to focus on Computer Science. I think that this semester will be great, I have a lot of fun classes that I am really interested in. This is the most excited I have been about the start of a semester in a long while.
 
 ## Classes:
 
 * Intro To The New Testament -- Guy Nave
  * I knew the professor was going to swear, but I was not expecting a "s**t" in the first five min.
+  * followed closely by a few f-bombs
+   * and shortly there after, copious profanity...
  * I really like how the professor handles the reading reflections
   * They are not a fixed length, just until the student feels comfertable with the content.
  * I feel like I am really going to like this class!
 
 * Programming Languages -- Kent Lee
- * ...
+ * Unfortunately, this class is entirely new material for everyone, so it is going s.l.o.w.
+ * The first two homework assignments took under 10 min. each, not that I am complaing
+  * Coming off of Physics homework (+2 hrs per assignment) it feels slightly out of place
+ * Though it is starting overwhelmingly boring, I still believe I will learn a lot.
