--- a/_posts/articles/2015-02-04-first-day-SP15.md
+++ b/_posts/articles/2015-02-04-first-day-SP15.md
@@ -17,26 +17,16 @@ Well, we made it through the near blizzard, the 3 hour drive that took all of 4.
 
 ## Classes:
 
-* Intro To The New Testament -- Guy Nave
+- Intro To The New Testament -- Guy Nave
+ - I knew the professor was going to swear, but I was not expecting a "s**t" in the first five min.
+  - followed closely by a few f-bombs
+   - and shortly there after, copious profanity...
+ - I really like how the professor handles the reading reflections
+  - They are not a fixed length, just until the student feels comfertable with the content.
+ - I feel like I am really going to like this class!
 
- * I knew the professor was going to swear, but I was not expecting a "s**t" in the first five min.
-
-  * followed closely by a few f-bombs
-
-   * and shortly there after, copious profanity...
-
- * I really like how the professor handles the reading reflections
-
-  * They are not a fixed length, just until the student feels comfertable with the content.
-
- * I feel like I am really going to like this class!
-
-* Programming Languages -- Kent Lee
-
- * Unfortunately, this class is entirely new material for everyone, so it is going s.l.o.w.
-
- * The first two homework assignments took under 10 min. each, not that I am complaing
-
-  * Coming off of Physics homework (+2 hrs per assignment) it feels slightly out of place
-  
- * Though it is starting overwhelmingly boring, I still believe I will learn a lot.
+- Programming Languages -- Kent Lee
+ - Unfortunately, this class is entirely new material for everyone, so it is going s.l.o.w.
+ - The first two homework assignments took under 10 min. each, not that I am complaing
+  - Coming off of Physics homework (+2 hrs per assignment) it feels slightly out of place
+ - Though it is starting overwhelmingly boring, I still believe I will learn a lot.
