--- a/_posts/articles/2015-02-04-first-day-SP15.md
+++ b/_posts/articles/2015-02-04-first-day-SP15.md
@@ -17,7 +17,8 @@ Well, we made it through the near blizzard, the 3 hour drive that took all of 4.
 
 ## Classes:
 
-<ul>###Intro To The New Testament -- Guy Nave
+###Intro To The New Testament -- Guy Nave
+<ul>
 	<li>Well this class is going to be...interesting</li>
 	<ul>
 		<li>I don't know if the copious profanity is mere the way he converses, or if he is just putting on a show...</li>
@@ -30,7 +31,9 @@ Well, we made it through the near blizzard, the 3 hour drive that took all of 4.
 	</ul>
 	<li>Through the profanity laced lectures, I believe I may just enjoy this class.</li>
 </ul>
-<ul>###Programming Languages -- Kent Lee
+
+###Programming Languages -- Kent Lee
+<ul>
 	<li>Unfortunately, because this class is entirely new material for everyone the pace is far from blistering.</li>
 	<li>The first two homework assignments took under 10 min. each, not that I am complaing</li>
 	<ul>
