fixing link on todo list page

--- a/_posts/projects/2014-10-16-todo-list.md
+++ b/_posts/projects/2014-10-16-todo-list.md
@@ -26,4 +26,4 @@ This is the first Javascript project that I put together. It was assigned in my 
 * Due dates
 * Reminders via email/SMS
 
-<a href="todo.maespey.com" class="btn btn-warning">View Application</a><a href="http://code.maespey.com" class="btn btn-primary">My Code</a>
+<a href="http://todo.maespey.com" target="_blank" class="btn btn-warning">View Application</a><a href="http://code.maespey.com" class="btn btn-primary">My Code</a>
